--- a/fourhills/gui/templates/character_info.j2
+++ b/fourhills/gui/templates/character_info.j2
@@ -5,9 +5,11 @@
   <h2>{{npc.name}}</h2> 
 {% endif %}
   <hr>
-  {{npc.stats.alignment.capitalize()}} {{npc.stats.name}} ({{npc.stats.size.capitalize()}} {{npc.stats.creature_type}})
 
+  {% if npc.stats %}
+  {{npc.stats.alignment.capitalize()}} {{npc.stats.name}} ({{npc.stats.size.capitalize()}} {{npc.stats.creature_type}})
   <br>
+  {% endif %}
   
   Appearance: {{npc.appearance}}
   {% if npc.accent %}
@@ -23,7 +25,7 @@
   {% endif %}
 
 {% if npc.phrases %}
-  <h2>Phrases</h2>
+  <h3>Phrases</h3>
   <ul>
     {% for phrase in npc.phrases %}
     <li>{{phrase}}</li>
