Added linking browser to automate link clicking and editing, if allowed

--- a/fourhills/gui/templates/character_info.j2
+++ b/fourhills/gui/templates/character_info.j2
@@ -7,7 +7,7 @@
   <hr>
 
   {% if npc.stats %}
-  {{npc.stats.alignment.capitalize()}} {{npc.stats.name}} ({{npc.stats.size.capitalize()}} {{npc.stats.creature_type}})
+  Stats: <a href="monster://{{npc.stats_base}}">{{npc.stats.alignment.capitalize()}} {{npc.stats.name}} ({{npc.stats.size.capitalize()}} {{npc.stats.creature_type}})</a>
   <br>
   {% endif %}
   
