--- a/fourhills/gui/templates/character_info.j2
+++ b/fourhills/gui/templates/character_info.j2
@@ -10,7 +10,7 @@
   Stats: <a href="monster://{{npc.stats_base}}">{{npc.stats.alignment.capitalize()}} {{npc.stats.name}} ({{npc.stats.size.capitalize()}} {{npc.stats.creature_type}})</a>
   <br>
   {% endif %}
-  
+
   Appearance: {{npc.appearance}}
   {% if npc.accent %}
     Accent: {{npc.accent}}
@@ -22,6 +22,10 @@
 
   {% if npc.background %}
   {{npc.background or ""}}
+  {% endif %}
+
+  {% if npc.description %}
+  {{npc.description or ""}}
   {% endif %}
 
 {% if npc.phrases %}
