Implemented quests without events

--- a/fourhills/gui/templates/location_info.j2
+++ b/fourhills/gui/templates/location_info.j2
@@ -37,3 +37,12 @@
   <h3>Danger Level</h3>
   <p>{{location.danger_level}}</p>
 {% endif %}
+
+{% if location.quests %}
+  <h3>Quests</h3>
+  <ul>
+    {% for quest in location.quests %}
+    <li><a href="quest://{{quest}}">{{quest}}</a></li>
+    {% endfor %}
+  </ul>
+{% endif %}
