Added XP lookup function

--- a/fourhills/gui/templates/battle_info.j2
+++ b/fourhills/gui/templates/battle_info.j2
@@ -190,7 +190,7 @@ Passive perception: {{stats.passive_perception}}
 {% endif %}
 
 {% if stats.challenge %}
-Challenge: {{stats.challenge}}
+Challenge: {{stats.challenge}} ({{ stats.xp }})
 {% endif %}
 
 
